<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="12dp"
            android:autofillHints="name"
            app:layout_constraintEnd_toEndOf="@+id/textViewRegister"
            app:layout_constraintStart_toStartOf="@+id/textViewRegister"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="text"
            android:padding="12dp"
            android:autofillHints="surname"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:autofillHints="username"
            app:layout_constraintEnd_toEndOf="@+id/editTextSurname"
            app:layout_constraintStart_toStartOf="@+id/editTextSurname"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:autofillHints="emailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:autofillHints="password"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:autofillHints="password"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/editTextRepeatPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextRepeatPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>